@@ -2,6 +2,7 @@ spring.integration.channels.autoCreate=true
 spring.integration.channels.maxUnicastSubscribers=0x7fffffff
 spring.integration.channels.maxBroadcastSubscribers=0x7fffffff
 spring.integration.channels.error.requireSubscribers=true
+spring.integration.channels.error.ignoreFailures=true
 spring.integration.taskScheduler.poolSize=10
 spring.integration.messagingTemplate.throwExceptionOnLateReply=false
 # Defaults to MessageHeaders.ID and MessageHeaders.TIMESTAMP
